--- a/Módulo 04 - Funciones y Eventos I/css/style.css
+++ b/Módulo 04 - Funciones y Eventos I/css/style.css
@@ -15,7 +15,7 @@ body {
 
 @font-face {
     font-family: "Digital7";
-    src: url('/fonts/Digital7.ttf') format('truetype');
+    src: url('../fonts/Digital7.ttf') format('truetype');
 }
 
 .text {
